# pandas-workshop

./: .gitignore  pyproject.toml
Chapter01/: activity1_01.ipynb  workbook.ipynb
Chapter02/: activity2.01.ipynb  workbook.ipynb
Chapter02/Datasets/: US_GDP_date_index.csv  model.csv
Chapter03/: Examples.ipynb  activity.ipynb  workbook.ipynb
Chapter04/: workbook.ipynb
